# splitsia

./: .gitignore  CLAUDE.md  README.md  index.html  package-lock.json  package.json  pyproject.toml  vite.config.ts
.github/workflows/: ci.yml  deploy.yml
cloud/api/: pyproject.toml  requirements.txt
cloud/api/shared/: dynamodb.py  scan_budget.py  split_store.py
cloud/api/splitleh/: __init__.py  calculate_split.py  money.py  parse_receipt.py  receipt_reconcile.py  repair_receipt.py  sg_receipt.py  types.py
cloud/api/splitleh_ocr/: bedrock_provider.py  lambda_function.py  normalize.py  pick_parse.py  run.py  textract_provider.py
cloud/api/splitleh_ocr/cdk/: __init__.py
cloud/api/splitleh_telegram/: formatters.py  keyboards.py  lambda_function.py  router.py  split_builder.py
cloud/api/splitleh_telegram/cdk/: __init__.py
cloud/api/tests/: conftest.py
cloud/api/tests/fixtures/: load_receipts.py  receipt_text.py
cloud/api/tests/shared/: test_scan_budget.py
cloud/api/tests/splitleh/: test_calculate_split.py  test_distribute_cents.py  test_parse_parity.py  test_parse_receipt.py  test_receipt_reconcile.py  test_sg_receipts.py
cloud/api/tests/splitleh_ocr/: test_ocr.py
cloud/api/tests/telegram/: test_claim_and_keyboards.py  test_claim_flow.py  test_formatters.py  test_handler.py  test_split_builder.py
cloud/infra/: .gitignore  README.md  app.py  cdk.json  pyproject.toml
docs/: sg-receipt-formats.md
lite/core/: package.json  tsconfig.json
lite/web/: index.html  package.json  tsconfig.app.json  vite.config.ts
public/: manifest.json
src/: App.tsx
(+82 files in other folders)
