[project]
name = "splitleh-api"
version = "0.1.0"
description = "SplitLeh Bot - API Lambda functions"
requires-python = ">=3.12"
dependencies = [
    "aws-lambda-powertools[all]>=3.31.0",
    "aiogram>=3.15",
    "httpx>=0.28",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "moto[dynamodb]>=5.0",
    "boto3>=1.35",
    "time-machine>=2.16",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]
